<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="portrait"
    tools:context=".DropActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drop_message" />
    
    <EditText
        android:id="@+id/input_subject"
        android:layout_height="wrap_content"
        android:hint="@string/input_subject_hint"
        android:lines="1"
        android:layout_width="fill_parent" />
    
    <EditText
        android:id="@+id/input_text"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/input_text_hint" />
   
   <LinearLayout
       android:orientation="horizontal"
       android:layout_height="wrap_content"
       android:layout_width="fill_parent">
    
	    <Button
	        android:id="@+id/button_draft"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/button_draft" />
	    
	    <Button
	        android:id="@+id/button_drop"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/button_drop" />
	    
	</LinearLayout>
	
</LinearLayout>